aux_source_directory(. SRC_LIST)
aux_source_directory(./Chapter10 SRC_LIST2)
aux_source_directory(./Chapter11 SRC_LIST3)
aux_source_directory(./Chapter12 SRC_LIST4)
aux_source_directory(./Chapter13 SRC_LIST13)
aux_source_directory(./Chapter14 SRC_LIST14)
add_executable(CppProcessTestUbuntu ${SRC_LIST} ${SRC_LIST2} ${SRC_LIST3} ${SRC_LIST4} ${SRC_LIST13} ${SRC_LIST14})